[package]
name = "server"
version = "0.1.0"
authors = ["saresend <saresend@usc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version="1.4.4", features=["sqlite"] }
warp = "0.2.2"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
